# ESP32Traffic

./: .gitignore  CMakeLists.txt  README.md  connect.h  partitions.csv  receive_images_and_infer.py  scheduler.h  sdkconfig.defaults  sdkconfig.example  secrects.h  software_time.c  traffic_light.cpp  traffic_light.h  yolo-training.ipynb
libraries/coreMQTT/port/network_transport/: network_transport.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  motorbike_detector.cpp  motorbike_detector.h  mqtt_demo_mutual_auth.c
main/certs/: client.crt
traffic_light/: connect.cpp  project_copy_20251218113714.ino  software_time.h
